--- a/design_system/index.html
+++ b/design_system/index.html
@@ -630,7 +630,7 @@
             <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="iconML" src="./Icon_Mobile.svg" alt="Mobile">
+                  <img class="iconL" src="./Icon_Mobile.svg" alt="Mobile">
                   <div class="centerHorz">
                     <div class="chip">Mobile</div>
                   </div>
@@ -638,7 +638,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="iconML" src="./Icon_Tablet.svg" alt="Tablet">
+                  <img class="iconL" src="./Icon_Tablet.svg" alt="Tablet">
                   <div class="centerHorz">
                     <div class="chip">Tablet</div>
                   </div>
@@ -647,7 +647,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="iconML" src="./Icon_Laptop.svg" alt="Laptop">
+                  <img class="iconL" src="./Icon_Laptop.svg" alt="Laptop">
                   <div class="centerHorz">
                     <div class="chip">Laptop</div>
                   </div>
