--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1043,7 +1043,7 @@
           <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <img class="iconML" src="./Icon_Mobile.svg" alt="Mobile">
+                <img class="iconL" src="./Icon_Mobile.svg" alt="Mobile">
                 <div class="centerHorz">
                   <div class="chip">Mobile</div>
                 </div>
@@ -1051,7 +1051,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="iconML" src="./Icon_Tablet.svg" alt="Tablet">
+                <img class="iconL" src="./Icon_Tablet.svg" alt="Tablet">
                 <div class="centerHorz">
                   <div class="chip">Tablet</div>
                 </div>
@@ -1060,7 +1060,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="iconML" src="./Icon_Laptop.svg" alt="Laptop">
+                <img class="iconL" src="./Icon_Laptop.svg" alt="Laptop">
                 <div class="centerHorz">
                   <div class="chip">Laptop</div>
                 </div>
@@ -1147,6 +1147,26 @@
               </div>
             </div>
           </div>
+          <div class="wrapper">
+            <div class="element">
+              <pre>
+              <div class="codeTiltle">CSS</div>
+              <code>
+                @media all and (min-width: 1880px) {}
+                @media all and (max-width: 1080px) {}
+                @media all and (max-width: 680px) {}
+                @media screen and (max-width: 480px) {}
+
+
+
+
+
+
+              </code>
+                
+            </pre>
+            </div>
+          </div>
           <div class="blankHM"></div>
           <!-- Arrow -->
           <div class="wrapper">
@@ -1197,6 +1217,144 @@
             </div>
           </div>
           <div class="blankHM"></div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Margin <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing1"></div>
+                <p><strong>XS</strong> 8 px &#47; 0.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing2"></div>
+                <p><strong>S</strong> 16 px &#47; 1 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing3"></div>
+                <p><strong>M</strong> 24 px &#47; 1.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing4"></div>
+                <p><strong>L</strong> 32 px &#47; 2 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing5"></div>
+                <p><strong>XL</strong> 40 px &#47; 2.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing6"></div>
+                <p><strong>XL</strong> 48 px &#47; 3 em</p>
+              </div>
+            </div>
+          </div>
+          <div class="blankHM"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Padding <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="paddingXS">
+
+                  <div class="WarmBg spacing1"></div>
+
+
+
+                </div>
+
+                <p><strong>XS</strong> 8 px &#47; 0.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing2"></div>
+                <p><strong>S</strong> 16 px &#47; 1 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing3"></div>
+                <p><strong>M</strong> 24 px &#47; 1.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing4"></div>
+                <p><strong>L</strong> 32 px &#47; 2 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing5"></div>
+                <p><strong>XL</strong> 40 px &#47; 2.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing6"></div>
+                <p><strong>XL</strong> 48 px &#47; 3 em</p>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg paddingXS"></div>
+                <p><strong>XS</strong> 4 px &#47; 0.25 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg paddingS"></div>
+                <p><strong>S</strong> 8 px &#47; 0.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg paddingM"></div>
+                <p><strong>M</strong> 12 px &#47; 0.75 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg paddingL"></div>
+                <p><strong>L</strong> 16 px &#47; 1 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg paddingXL"></div>
+                <p><strong>XL</strong> 24 px &#47; 1.25 em</p>
+              </div>
+            </div>
+
+          </div>
+          <div class="blankHM"></div>
 
           <!-- Arrow -->
           <div class="wrapper">
@@ -1206,37 +1364,67 @@
             </div>
           </div>
           <!-- Arrow -->
-          <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
+          <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <div class="Testing borderRadiusXS"></div>
-                <p>XS 4 px &#47; 0.25 em</p>
+                <p><strong>XS</strong> 4 px &#47; 0.25 em</p>
 
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
                 <div class="Testing borderRadiusS"></div>
-                <p>S 8 px &#47; 0.5 em</p>
-
-              </div>
-            </div>
-            <div class="Grid-cell borderRadiusM">
-              <div class="element">
-                <div class="Testing borderRadiusM"></div>
-                <p>M 16 px &#47; 1 em</p>
+                <p><strong>S</strong> 8 px &#47; 0.5 em</p>
 
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="Testing borderRadiusL"></div>
-                <p>L 24 px &#47; 1.5 em</p>
+                <div class="Testing borderRadiusM"></div>
+                <p><strong>M</strong> 12 px &#47; 0.75 em</p>
+
+              </div>
+            </div>
+            <div class="Grid-cell borderRadiusL">
+              <div class="element">
+                <div class="Testing borderRadiusM"></div>
+                <p><strong>L</strong> 16 px &#47; 1 em</p>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Testing borderRadiusXL"></div>
+                <p><strong>XL</strong> 24 px &#47; 1.25 em</p>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Testing borderRadiusMax"></div>
+                <p><strong>Max</strong> 50%</p>
 
               </div>
             </div>
           </div>
+          <div class="wrapper">
+            <div class="element">
+              <pre>
+              <div class="codeTiltle">HTML</div>
+              <code>
+                &lt;div class="borderRadiusXS"&gt;&lt;/div&gt;
+                &lt;div class="borderRadiusS"&gt;&lt;/div&gt;
+                &lt;div class="borderRadiusM"&gt;&lt;/div&gt;
+                &lt;div class="borderRadiusL"&gt;&lt;/div&gt;
+                &lt;div class="borderRadiusXL"&gt;&lt;/div&gt;
+                &lt;div class="borderRadiusMax"&gt;&lt;/div&gt;
 
+                </code>
+                
+            </pre>
+            </div>
+          </div>
 
 
 
@@ -1808,19 +1996,6 @@
           </div>
         </div>
         <div class="blankHXS"></div>
-
-
-
-
-
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="element">
-            <h2 class="tArrow">Border Radius <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-            </h2>
-          </div>
-        </div>
-        <!-- Arrow -->
         <!-- Arrow -->
         <div class="wrapper">
           <div class="element">
@@ -1907,8 +2082,32 @@
           </div>
           <!-- Arrow -->
           <div class="blankHXS"></div>
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+            <div class="Grid-cell">
+              <div class="element">
+                <a><img class="iconXS paddingXS hoverGrey300 borderRadiusMax" src="../icon/in.svg" alt="linkedIn"
+                    title="linkedIn"></a>
+
+                <a><img class="iconXS" src="../icon/in.svg" alt="linkedIn" title="linkedIn"></a>
+                <a><img class="iconXS" src="../icon/git.svg" alt="GitHub" title="GitHub"></a>
+                <a><img class="iconXS" src="../icon/Codepen.svg" alt="CodePen" title="CodePen"></a>
+                <a> <img class="iconXS" src="../icon/ins.svg" alt="Instagram" title="Instagram"></a>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <a> <img class="iconS" src="../icon/in.svg" alt="linkedIn" title="linkedIn"></a>
+                <a> <img class="iconS" src="../icon/git.svg" alt="GitHub" title="GitHub"></a>
+                <a><img class="iconS" src="../icon/Codepen.svg" alt="CodePen" title="CodePen"></a>
+                <a> <img class="iconS" src="../icon/ins.svg" alt="Instagram" title="Instagram"></a>
+
+              </div>
+            </div>
+          </div>
+
+
           <div class="element">
-            <div class="iconSM">
+            <div class="iconS">
               <button class="WidthHeighMax centerVH" contenteditable="true">
                 <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
                 <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
@@ -1937,7 +2136,7 @@
 
 
           <div class="element">
-            <div class="ClipboardBoxIconOnly iconSM">
+            <div class="ClipboardBoxIconOnly iconS">
               <button class="ClipboardIconOnly" contenteditable="true">
                 <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
                 <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
@@ -1945,7 +2144,7 @@
             </div>
           </div>
           <div class="element">
-            <div class="ClipboardBoxIconOnly iconSM">
+            <div class="ClipboardBoxIconOnly iconS">
               <button class="ClipboardIconOnly" contenteditable="true">
                 <img class="iconXS" src="../icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">vickyw.design@gmail.com</p>
