--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1168,59 +1168,11 @@
             </div>
           </div>
           <div class="blankHM"></div>
+ 
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow">Spacing <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-              </h2>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="blankHXS"></div>
-
-          <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing6 iconL"></div>
-                <p>3 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing5 iconL"></div>
-                <p>2.5 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing4 iconL"></div>
-                <p>2 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing3 iconL"></div>
-                <p>1.5 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing2 iconL"></div>
-                <p>1 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing1 iconL"></div>
-                <p>0.5 em</p>
-              </div>
-            </div>
-          </div>
-          <div class="blankHM"></div>
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="element">
-              <h2 class="tArrow">Margin <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow">Spacing &#38; Margin <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
               </h2>
             </div>
           </div>
@@ -1261,7 +1213,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="WarmBg spacing6"></div>
-                <p><strong>XL</strong> 48 px &#47; 3 em</p>
+                <p><strong>Max</strong> 48 px &#47; 3 em</p>
               </div>
             </div>
           </div>
@@ -1276,51 +1228,7 @@
           </div>
           <!-- Arrow -->
           <div class="blankHXS"></div>
-          <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="paddingXS">
 
-                  <div class="WarmBg spacing1"></div>
-
-
-
-                </div>
-
-                <p><strong>XS</strong> 8 px &#47; 0.5 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing2"></div>
-                <p><strong>S</strong> 16 px &#47; 1 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing3"></div>
-                <p><strong>M</strong> 24 px &#47; 1.5 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing4"></div>
-                <p><strong>L</strong> 32 px &#47; 2 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing5"></div>
-                <p><strong>XL</strong> 40 px &#47; 2.5 em</p>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="WarmBg spacing6"></div>
-                <p><strong>XL</strong> 48 px &#47; 3 em</p>
-              </div>
-            </div>
-          </div>
           <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
             <div class="Grid-cell">
               <div class="element">
@@ -1349,10 +1257,15 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="WarmBg paddingXL"></div>
-                <p><strong>XL</strong> 24 px &#47; 1.25 em</p>
+                <p><strong>XL</strong> 20 px &#47; 1.25 em</p>
               </div>
             </div>
-
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg paddingMax"></div>
+                <p><strong>Max</strong> 24 px &#47; 1.5 em</p>
+              </div>
+            </div>
           </div>
           <div class="blankHM"></div>
 
