--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1168,7 +1168,7 @@
             </div>
           </div>
           <div class="blankHM"></div>
- 
+
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
@@ -1994,7 +1994,8 @@
             </div>
           </div>
           <!-- Arrow -->
-          <div class="blankHXS"></div>
+          <!-- ========================== -->
+
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
             <div class="Grid-cell">
               <div class="element">
@@ -2070,10 +2071,21 @@
           <a href="mailto:vickyw.design@gmail.com">
             <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
           </a>
+          <div class="blankHXS"></div>
+          <div class="element">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+          </div>
+          <!-- ========================== -->
 
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
             <div class="Grid-cell">
               <div class="element">
+
                 <a><img class="intro-logo" src="../icon/in.svg" alt="linkedIn" title="linkedIn"></a>
                 <a><img class="intro-logo" src="../icon/git.svg" alt="GitHub" title="GitHub"></a>
                 <a><img class="intro-logo" src="../icon/Codepen.svg" alt="CodePen" title="CodePen"></a>
@@ -2111,23 +2123,29 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <a><img class="iconDemo" src="../icon/arrow-ne.svg" alt="Arrow" title="icon"></a>
-                <a><img class="iconDemo" src="../icon/arrow-se.svg" alt="Arrow" title="icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/arrow-ne.svg" alt="Arrow" title="icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/arrow-se.svg" alt="Arrow" title="icon"></a>
               </div>
             </div>
           </div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <a><img class="iconDemo" src="../icon/icon_Iteration.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconDemo" src="../icon/icon_Redesign.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconDemo" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
+                <div class="ClipboardBoxIconOnly iconS">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconXS paddingM" src="../icon/in.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+                <a><img class="iconXS paddingM" src="../icon/icon_Iteration.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_Redesign.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
 
-                <a><img class="iconDemo" src="../icon/icon_Final.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconDemo" src="../icon/icon_Testing.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconDemo" src="../icon/library.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconDemo" src="../icon/layout.svg" alt="Layout" title="Icon"></a>
-                <a><img class="iconDemo" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_Final.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_Testing.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/library.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/layout.svg" alt="Layout" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
 
               </div>
             </div>
@@ -3463,7 +3481,7 @@
   <footer class="GreyBg100">
     <div class="blankHM"></div>
 
-    <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
+    <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper Grid--center">
       <div class="Grid-cell">
         <div class="element">
           <div class="element">
@@ -3476,24 +3494,33 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="footer-right">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
             <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconXS hoverGrey300" src="../icon/in.svg" alt="LinkedIn">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
             </a>
             <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconXS hoverGrey300" src="../icon/git.svg" alt="GitHub" title="GitHub">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
             </a>
             <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconXS hoverGrey300" src="../icon/Codepen.svg" alt="CodePen">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
             </a>
             <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconXS hoverGrey300" src="../icon/ins.svg" alt="Instagram" title="Instagram">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/ins.svg" alt="Instagram" title="Instagram">
             </a>
           </div>
         </div>
       </div>
     </div>
     <div class="blankHS"></div>
+    <div class="blankHXS"></div>
+
     <div class="blankPhone"></div>
+
 
   </footer>
   <!--footer-->
