--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1994,6 +1994,28 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconS paddingM" src="../icon/in.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+                <a><img class="iconXS paddingM" src="../icon/icon_Iteration.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_Redesign.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
+
+                <a><img class="iconXS paddingM" src="../icon/icon_Final.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_Testing.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/library.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/layout.svg" alt="Layout" title="Icon"></a>
+                <a><img class="iconXS paddingM" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
+
+              </div>
+            </div>
+          </div>
           <!-- ========================== -->
 
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
@@ -2020,66 +2042,10 @@
           </div>
 
 
-          <div class="element">
-            <div class="iconS">
-              <button class="WidthHeighMax centerVH" contenteditable="true">
-                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
-            </div>
-          </div>
-
-          <div class="element">
-            <div class="ClipboardBoxIconOnly iconM">
-              <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
-            </div>
-          </div>
-
-          <div class="element">
-            <div class="ClipboardBoxIconOnly iconM">
-              <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconXS" src="../icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">vickyw.design@gmail.com</p>
-              </button>
-            </div>
-          </div>
 
 
 
-          <div class="element">
-            <div class="ClipboardBoxIconOnly iconS">
-              <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
-            </div>
-          </div>
-          <div class="element">
-            <div class="ClipboardBoxIconOnly iconS">
-              <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconXS" src="../icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">vickyw.design@gmail.com</p>
-              </button>
-            </div>
-          </div>
 
-
-
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
-          </a>
-          <div class="blankHXS"></div>
-          <div class="element">
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
-            </div>
-          </div>
           <!-- ========================== -->
 
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
@@ -2128,28 +2094,7 @@
               </div>
             </div>
           </div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="ClipboardBoxIconOnly iconS">
-                  <button class="ClipboardIconOnly" contenteditable="true">
-                    <img class="iconXS paddingM" src="../icon/in.svg" alt="LinkedIn">
-                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-                  </button>
-                </div>
-                <a><img class="iconXS paddingM" src="../icon/icon_Iteration.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconXS paddingM" src="../icon/icon_Redesign.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconXS paddingM" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
 
-                <a><img class="iconXS paddingM" src="../icon/icon_Final.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconXS paddingM" src="../icon/icon_Testing.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconXS paddingM" src="../icon/library.svg" alt="Icon" title="Icon"></a>
-                <a><img class="iconXS paddingM" src="../icon/layout.svg" alt="Layout" title="Icon"></a>
-                <a><img class="iconXS paddingM" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
-
-              </div>
-            </div>
-          </div>
           <div class="element">
             <pre>
               <div class="codeTiltle">HTML</div>
@@ -2213,15 +2158,69 @@
           </div>
           <!-- Arrow -->
           <div class="blankHXS"></div>
-          <div class="element">
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
+
+          <div class="Grid Grid--gutters Grid--cols-12 wrapper Grid--center">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconXS hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconS hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconL hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconXL hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
-
           <div class="blankHM"></div>
           <!-- Arrow -->
           <div class="wrapper">
@@ -3493,7 +3492,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="footer-right">
+          <div class="footer-right Grid--center">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
                 <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
@@ -3504,13 +3503,15 @@
               <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
             </a>
             <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+                title="GitHub">
             </a>
             <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
               <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
             </a>
             <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/ins.svg" alt="Instagram" title="Instagram">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+                title="Instagram">
             </a>
           </div>
         </div>
